--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,16 @@
-html, body {
+body {
   margin: 0;
   padding: 0;
-  min-height: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #ffffff;
+}
+
+html.page-home,
+body.page-home {
   background-color: #5E5F57;
+}
+
+html.page-order,
+body.page-order {
+  background-color: #cc6969;
 }
